# Fake-News-Detection

./: .gitignore  FakeNewsDetectionModel.ipynb  README.md  app.py  fake_news_model.pkl  pyproject.toml  requirements.txt  test_model.py  vectorizer.pkl
artifacts/: logreg_metrics.json  logreg_pipeline.joblib
fake_news_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  data_utils.py  modeling.py  train.py
static/: script.js  style.css
templates/: index.html
