[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Modernized LIAR dataset pipeline for detecting fake news statements"
authors = [{ name = "Fake News Detection Team" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "typer>=0.12",
    "rich>=13.7"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.24",
    "ruff>=0.6",
    "black>=24.8"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
